# Coil-Drawing

./: .gitignore  AGENTS.md  CoilDrawing.spec  README.md  main.py  pyproject.toml
20260710 some problems/software-v20260710-test/: some_problems_in_version_20260710.md
20260710 some problems/software-v202607110207-test/: some_problems_in_version_202607110207.md
docs/: 使用教程.md
some_user_problems/software-v202607110207-test/: some_problems_in_version_202607110207.md
some_user_problems/software-v202607111747-test/: some_problems_in_version_202607111747.md
some_user_problems/software-v202607121128-test/: some_problems_in_version_202607121128.md
some_user_problems/software-v202607121232-test/: some_problems_in_version_202607121232.md
some_user_problems/software-v202607130557-test/: some_problems_in_version_202607130557.md
some_user_problems/software-v202607131115-test/: some_problems_in_version_202607131115.md
src/coildrawing/: __init__.py  compat.py  config_io.py  drawing2d.py  (+6 more)
tests/: test_config_io.py  test_drawing2d.py  test_engine.py  test_model3d.py  test_step_export.py  test_step_i18n.py  test_workspace.py
tmp/: check_feasible.py  check_interference_n8.py  check_new_nose.py  debug_len.py  debug_rd2.py  deliver_v202607160359.py  diag_slack.py  nose_beta_scan.py  nose_cross_locate.py  nose_decision_sketch.py  nose_proposal_b.py  nose_scheme_sketch.py  nose_yaw0_analysis.py  profile_build.py  profile_build2.py  render_n8_views.py
tools/: build_exe.ps1  debug_audit.py  dev_smoke_detail.py  extract_pdf.py  render_3d.py  render_detail.py  smoke_3d.py
(+20 files in other folders)
